feat: move ai endpoints
